--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "tailwind.config.ts",
+    "tailwind.config.js",
     "src/app/[site]/page.tsx"
   ],
   "exclude": ["node_modules"]
